syntax = "proto3";

package api.cart.v1;

import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "kratos-admin/api/order/v1;v1";
option java_multiple_files = true;
option java_package = "api.order.v1";

service Order {
	// 添加sku到购物车
	rpc AddCartItem (AddCartItemRequest) returns (AddCartItemReply){
		option (google.api.http) = {
			post: "/v1/cart"
			body: "*"
		};
	};
	// 删除购物车中sku
	rpc DeleteCartItem(DeleteCartItemRequest) returns (DeleteCartItemReply){
		option (google.api.http) = {
			delete: "/v1/cart/{product_id}/{product_sku_id}"
		};
	};

	// 批量删除购物车中的商品
rpc BatchDeleteCartItem(BatchDeleteCartItemRequest) returns (BatchDeleteCartItemReply){
		option (google.api.http) = {
			post: "/v1/cart/item/delete"
			body: "*"
		};
}
	// 获取购物车商品列表
	rpc GetCartList(GetCartListRequest) returns (GetCartListReply){
		option (google.api.http) = {
			get: "/v1/order"
		};
	};
	// 更新购物车商品数量
	rpc UpdateCartItemQuantity(UpdateCartItemQuantityRequest) returns (UpdateCartItemQuantityReply){
		option (google.api.http) = {
			put: "/v1/order/{product_id}/{product_sku_id}"
			body: "*"
		};
	};
	// 清空购物车
	rpc ClearCart(ClearCartRequest) returns (ClearCartReply){
		option (google.api.http) = {
			delete: "/v1/order"
		};
	};
}
message BatchDeleteCartItemRequest {
	repeated string product_ids = 1;
	string member_id = 2;
}
message BatchDeleteCartItemReply {}
message CartItem  {// 商品sku
	string       product_sku_id = 1;// sku id
	uint32       count = 2;// 数量
	double       price = 3;// 价格
	string       product_id = 4;// 商品id
}
message AddCartItemRequest {
	string       product_id = 1;// 商品id
	string       product_sku_id = 2;// 商品sku id
	uint32       count = 4;
	string       member_id = 3;// 用户id
	double       price = 5;// 价格
}
message AddCartItemReply {}

message DeleteCartItemRequest{
	string product_id = 1;
	string product_sku_id = 2;
	string member_id = 3;
}

message DeleteCartItemReply {}

message GetCartListRequest{
	string member_id = 1;
}
message GetCartListReply {
	repeated CartItem list = 1;
}

message UpdateCartItemQuantityRequest{
	string product_id = 1;
	string product_sku_id = 2;
	uint32 count = 3;
	string member_id = 4;
}
message UpdateCartItemQuantityReply {}

message ClearCartRequest{
	string member_id = 1;
}
message ClearCartReply {}